Minor changes to report

--- a/Reports/Final/literature.bib
+++ b/Reports/Final/literature.bib
@@ -83,7 +83,7 @@ author = {TomasMikula},
 howpublished = {\url{https://github.com/TomasMikula/ReactFX}},
 month = {January},
 year = {2016},
-note = {Accessed: 28 March 2016},
+note = {Accessed: 28 March 2016}
 }
 
 @Misc{rxjava,
@@ -92,7 +92,7 @@ author = {ReactiveX},
 howpublished = {\url{https://github.com/ReactiveX/RxJava}},
 month = {March},
 year = {2016},
-note = {Accessed: 28 March 2016},
+note = {Accessed: 28 March 2016}
 }
 @Misc{rxjavafx,
 title = {"RxJavaFX"},
@@ -100,27 +100,27 @@ author = {ReactiveX},
 howpublished = {\url{https://github.com/ReactiveX/RxJavaFX}},
 month = {March},
 year = {2016},
-note = {Accessed: 28 March 2016},
+note = {Accessed: 28 March 2016}
 }
 @Misc{reactivex,
 title = {Observable},
 author = {ReactiveX},
 howpublished = {\url{http://reactivex.io/documentation/observable.html}},
-note = {Accessed: 28 March 2016},
+note = {Accessed: 28 March 2016}
 }
 @Misc{gimp,
-OPTauthor = {The GIMP Team},
-OPTtitle = {About GIMP},
-OPThowpublished = {\url{https://www.gimp.org/about/}},
-OPTyear = {2015},
-OPTnote = {Accessed: 30 March 2016},
+author = {The GIMP Team},
+title = {About GIMP},
+howpublished = {\url{https://www.gimp.org/about/}},
+year = {2015},
+note = {Accessed: 30 March 2016}
 }
 @Misc{platform,
-OPTauthor = {Oracle},
-OPTtitle = {Platform},
-OPThowpublished = {\url{https://docs.oracle.com/javase/8/javafx/api/javafx/application/Platform.html}},
-OPTyear = {2015},
-OPTnote = {Accessed: 29 March 2016},
+author = {Oracle},
+title = {Platform},
+howpublished = {\url{https://docs.oracle.com/javase/8/javafx/api/javafx/application/Platform.html}},
+year = {2015},
+note = {Accessed: 29 March 2016}
 }
 
 
