Added table of contents

--- a/Reports/Final/team_londonsw.tex
+++ b/Reports/Final/team_londonsw.tex
@@ -37,6 +37,8 @@
 \title{LondonSW: Traffic Simulator}
 \author{Violetta Avkhukova\\Felix Santiago Anda Basabe\\Rawan Mohammed Alrahili\\Jia Liu\\Yakubu Aliyu Doma}
 \maketitle
+\tableofcontents
+\newpage
 
 \part{Introduction}
 \paragraph{}
