Fixed minor sectioning error

--- a/Reports/Final/team_londonsw.tex
+++ b/Reports/Final/team_londonsw.tex
@@ -538,10 +538,10 @@ We made the system a user-friendly application. Users can monitor and control th
 \paragraph{}
 In general, we worked well as a team, with each member focusing on a roughly different aspect of the system. There were no major conflicts and everyone understood the importance of good, hard work for this project.
 
-\subsection{Things that did not go well and what we did}
+\section{Things that did not go well and what we did}
 We had many difficulties along the way, but we always managed to pull through and resolve them. The ticker went through several iterations itself, with improvements being made each time. The animation started off basic, which also got improved several times over the course of the project. Bugs like traffic lights not working in loaded maps got fixed promptly. And finally, the resize factor used to display maps poorly, but now does a good job for all map sizes.
 
-\subsection{Possibilities for the future}
+\section{Possibilities for the future}
 \paragraph{}
 It is impossible to implement all ideas we had because of short term. In the future, we can add more vehicle types like police cars, bicycles, buses, etc. as well as more road types including railroads and overpasses. There can be arc intersections instead of cross intersections. We can make our system adapt to real maps like Google Maps. By providing a real location, users can get traffic situations through our system. By connecting background log files to real maps, it would be possible to deliver these log files to real traffic monitoring stations for furthter-step traffic analysis.
 
